fixes overflow

--- a/css/index.css
+++ b/css/index.css
@@ -247,7 +247,7 @@ body {
     line-height: 70px;
   }
 }
-@media only screen and (min-width: 100px) {
+@media only screen and (min-width: 1400px) {
   .home-page {
     padding-bottom: 20vh;
   }
