--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -157,7 +157,7 @@
 
 }
 
-@media only screen and (min-width: 100px){
+@media only screen and (min-width: 1400px){
     .home-page{
         padding-bottom: 20vh;
     }
